--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^4.0.5
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,8 @@ flutter:
     - assets/images/steering_wheel.jpeg
     - assets/images/claim.png
     - assets/images/map.png
-    - assets/images/pickuptruck.png 
+    - assets/images/pickuptruck.png
+    - assets/images/driverscorebar.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
